# vtol

./: README.md
vtol/: CMakeLists.txt  package.xml
vtol_controller/: CMakeLists.txt  package.xml
vtol_controller/config/: hardware_controllers.yaml
vtol_controller/launch/: joint_controllers.launch  ros_controllers.launch
vtol_description/: CMakeLists.txt  package.xml
vtol_description/launch/: debug.launch  load.launch  vtol.launch
vtol_description/launch/rviz/: empty.rviz
vtol_description/urdf/: vtol.urdf.xacro
vtol_description/urdf/aileron/default/: aileron.urdf.xacro  aileron_parameters.urdf.xacro
vtol_description/urdf/base/0_0_0/: Base.STL  Base.stl  vtol_base.urdf.xacro  vtol_base_parameters.urdf.xacro
vtol_description/urdf/elevator/default/: elevator.urdf.xacro  elevator_parameters.urdf.xacro
vtol_description/urdf/include/: vtol_plugin.gazebo.xacro  vtol_utils.urdf.xacro
vtol_description/urdf/rotor/default/: front_rotor.urdf.xacro  hind_rotor.urdf.xacro  hind_rotor_parameters.urdf.xacro
vtol_description/urdf/rotor/double/: front_rotor.urdf.xacro  front_rotor_parameters.urdf.xacro  hind_rotor.urdf.xacro  hind_rotor_parameters.urdf.xacro
vtol_gazebo/: CMakeLists.txt  README.md  package.xml
vtol_gazebo/include/vtol_gazebo/: AerodynamicContainerBase.hpp  DoubleRotorGazeboPlugin.hpp  RotorGazeboPlugin.hpp  VtolAerodynamicContainer.hpp  VtolBaseGazeboPlugin.hpp
vtol_gazebo/include/vtol_gazebo/effort_module/: AerodynamicForce.hpp
vtol_gazebo/include/vtol_gazebo/rotor/: DoubleRotorGazeboPlugin.hpp  RotorGazeboPlugin.hpp
vtol_gazebo/include/vtol_gazebo/wrench_module/: AerodynamicForce.hpp
vtol_gazebo/launch/: gazebo.launch
vtol_gazebo/src/: DoubleRotorGazeboPlugin.cpp  RotorGazeboPlugin.cpp  VtolBaseGazeboPlugin.cpp
vtol_gazebo/src/rotor/: DoubleRotorGazeboPlugin.cpp  RotorGazeboPlugin.cpp
vtol_gazebo/test/: aerodynamic_test.cpp
vtol_gazebo/test/launch/: aerodynamic_test.launch
vtol_sim/: CMakeLists.txt  package.xml
vtol_sim/config/: rviz.rviz
vtol_sim/config/rviz/: vtol.rviz
vtol_sim/config/vtol/: parameters_sim.yaml
vtol_sim/launch/: sim.launch
