<?xml version="1.0"?>
<package format="2">
  <name>vtol</name>
  <version>0.0.0</version>
  <description>This package to build necessary stuff</description>

  <maintainer email="m.efetiryaki@gmail.com">Mehmet Efe Tiryaki</maintainer>
  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>vtol_description</depend>
  <depend>vtol_sim</depend>
  <depend>vtol_gazebo</depend>
  <depend>vtol_controller</depend>

</package>
